; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_arp-util.c_arp_send_announcement.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_arp-util.c_arp_send_announcement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ether_addr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arp_send_announcement(i32 %0, i32 %1, i32 %2, %struct.ether_addr* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.ether_addr*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.ether_addr* %3, %struct.ether_addr** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.ether_addr*, %struct.ether_addr** %8, align 8
  %13 = call i32 @arp_send_packet(i32 %9, i32 %10, i32 %11, %struct.ether_addr* %12, i32 1)
  ret i32 %13
}

declare dso_local i32 @arp_send_packet(i32, i32, i32, %struct.ether_addr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
